# dega-dudu-bldc-reproducibility

./: CHECKSUMS.sha256  CITATION.cff  FILE_INVENTORY.csv  LICENSE  Makefile  NOTICE  README.md  RELEASE_CHECKLIST.md  REPOSITORY_MANIFEST.json  SOURCE_PROVENANCE.json  VALIDATION_SUMMARY.json  pyproject.toml
Scripts/: 00_fetch_dataset.py  01_prepare_windows.py  02_train_classifiers.py  03_generate_evidence.py  04_run_xai.py  05_run_dega.py  06_generate_figures.py  _stage_runner.py  reproduce_all.py
Scripts/AnalysisScripts/: generate_article_v1_real_evidence.py  run_article_v1_minimal_e2.py  run_article_v1_minimal_xai.py  run_article_v1_window_classifiers.py
Scripts/ProcessingScripts/: build_article_v1_window_analysis.py
Scripts/Publication/: build_article_v1_publication_package.py  generate_article_v1_figures.py  generate_article_v1_xai_figures.py
article/: README.md  manuscript_reference.json
configs/article/: article_state_mapping.yaml  evidence_contract.yaml  evidence_pipeline.yaml  window_temporal_representation.yaml
configs/experiments/: spline_transition_study_v1.yaml
configs/rules/: spline_transition_study_v1_static_rules.yaml
configs/transition_policies/: bayesian_mcmc_transition_policy_v1.yaml  deterministic_posterior_approximation_v1.yaml  hybrid_transition_policy_v1.yaml  static_transition_matrix_v1.yaml
docs/: ARCHITECTURE.md  ARTICLE_MAPPING.md  ARTIFACTS.md  EXPERIMENTS.md  REPRODUCIBILITY.md  VALIDATION.md
reference/: expected_article_results.json
reference_inputs/: README.md
tests/: test_repository_contract.py
(+112 files in other folders)
